<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_layout"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_layout"
        android:title="@string/change_info_see_all_layout"
        >
        <menu >
            <item
                android:id="@+id/linear_layout"
                android:orderInCategory="0"
                app:showAsAction="ifRoom"
                android:title="@string/linear_layout"
                />
            <item
                android:id="@+id/grid_layout"
                android:orderInCategory="0"
                app:showAsAction="ifRoom"
                android:title="@string/grid_layout"
                />
        </menu>
    </item>

</menu>
