<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardview_elevation"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:padding="6dp"
    app:cardCornerRadius="@dimen/cardview_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_background">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title"
            android:textColor="@color/primary_dark"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_title"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="10dp"
            android:text="@string/description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_description"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/item_view_margin_top"
            android:padding="10dp"
            android:text="@string/date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_description"
            android:layout_alignEnd="@id/tv_item_date"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/item_view_margin_top"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:text="@string/time" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
