<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateEditNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- - - >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        <-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_left"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginEnd="@dimen/edit_text_margin_right"
            android:background="@null"
            android:hint="@string/edit_note_title"
            android:maxLength="30" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_left"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginEnd="@dimen/edit_text_margin_right"
            android:background="@null"
            android:hint="@string/edit_note_description"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/floating_action_margin_right"
        android:layout_marginBottom="@dimen/edit_note_floating_action_margin_bottom"
        android:background="?attr/colorSecondary"
        android:src="@drawable/ic_fab_save"
        android:visibility="visible"
        app:fabSize="normal"
        android:contentDescription="@string/app_name" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>