<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/detail_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/info_detail_image_view"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="center"
                android:src="@drawable/obama" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/name_detail_card_view"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_below="@+id/container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-40dp"
            android:background="@drawable/cardview_background"
            android:paddingTop="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/obama"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/first_detail_card_view"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_below="@+id/name_detail_card_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/cardview_background"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/item_info_detail_party"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    tools:text="Democratic" />


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:background="?attr/colorPrimaryVariant" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/item_info_detail_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="44th president" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/second_detail_cardview"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_detail_card_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/cardview_background"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:layout_weight="2"
                        android:padding="10dp"
                        android:text="@string/took_office" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:padding="10dp"
                        android:text="@string/left_office" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:padding="10dp"
                        android:text="@string/birth_year" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:padding="10dp"
                        android:text="@string/death_year" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/item_info_detail_start_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/took_office" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/item_info_detail_end_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/left_office" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/item_info_detail_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/birth_year" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/item_info_detail_dead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/death_year" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>